--- a/index.html
+++ b/index.html
@@ -14,60 +14,49 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div id="container">
-      <div id="profile">
-        <img
-          src="./assets/avatar.png"
-          alt="Foto de Davi Ferreira olhando para o lado, usando óculos preto com detalhes vermelhos, camiseta preta, uma corrente dourada e ao fundo, um lago e árvores."
-        />
-        <p>@daviferreira</p>
-      </div>
+    <div id="background">
+      <div id="container">
+        <div id="profile">
+          <img
+            src="./assets/avatar.png"
+            alt="Foto de Davi Ferreira olhando para o lado, usando óculos preto com detalhes vermelhos, camiseta preta, uma corrente dourada e ao fundo, um lago e árvores."
+          />
+          <p>@daviferreira</p>
+        </div>
 
-      <div id="switch" onclick="toggleMode()">
-        <button></button>
-        <span></span>
-      </div>
+        <div id="switch" onclick="toggleMode()">
+          <button></button>
+          <span></span>
+        </div>
 
-      <ul>
-        <li>
-          <a href="#">Inscrever-se no NLW</a>
-        </li>
-        <li>
-          <a href="#">Baixar meu e-book</a>
-        </li>
-        <li>
-          <a href="https://github.com/davi-de-santana-ferreira" target="_blank"
-            >Ver meu portfólio</a
+        <ul>
+          <li>
+            <a
+              href="https://github.com/davi-de-santana-ferreira"
+              target="_blank"
+              >Ver meu portfólio</a
+            >
+          </li>
+        </ul>
+        <div id="social-links">
+          <a href="https://github.com/davi-de-santana-ferreira" target="_blank">
+            <ion-icon name="logo-github"></ion-icon
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/davi-ferreira-28ba111a4/"
+            target="_blank"
           >
-        </li>
-        <li>
-          <a href="https://rocketseat.com.br/explorer" target="_blank"
-            >Conheça o Explorer</a
-          >
-        </li>
-      </ul>
-      <div id="social-links">
-        <a href="https://github.com/davi-de-santana-ferreira" target="_blank">
-          <ion-icon name="logo-github"></ion-icon
-        ></a>
-        <a href="#"> <ion-icon name="logo-instagram"></ion-icon></a>
-        <a
-          href="https://www.youtube.com/channel/UCGU4Fkkb6ev3J41dJg-Dxag"
-          target="_blank"
-        >
-          <ion-icon name="logo-youtube"></ion-icon
-        ></a>
-        <a
-          href="https://www.linkedin.com/in/davi-ferreira-28ba111a4/"
-          target="_blank"
-        >
-          <ion-icon name="logo-linkedin"></ion-icon
-        ></a>
+            <ion-icon name="logo-linkedin"></ion-icon
+          ></a>
+          <a href="mailto:santanadavi365@gmail.com" target="_blank">
+            <ion-icon name="mail"></ion-icon
+          ></a>
+        </div>
+        <footer>
+          Feito com ♥ por Davi Ferreira e
+          <a href="https://rocketseat.com.br/" target="_blank">Rocketseat</a>
+        </footer>
       </div>
-      <footer>
-        Feito com ♥ pela
-        <a href="https://rocketseat.com.br/" target="_blank">Rocketseat</a>
-      </footer>
     </div>
 
     <script
